Se agregaron 2 nuevas cadenas de conexión

--- a/Web.config
+++ b/Web.config
@@ -7,7 +7,16 @@
 
 <configuration>
   <connectionStrings>
-    <add name ="cnn" connectionString ="data source=a;user id=sa;password=Express;initial catalog=d"/>
+    <!-- Conexion a Sql Server usando Sql Server Authentication-->
+    <add name ="cnn" connectionString ="data source=nombre-servidor;user id=nombreusuario;password=supassword;initial catalog=base_de_datos"/>
+
+    <!-- Conexion a GearHost-->
+    <!--<add name ="cnn" connectionString ="data source=servidor;user id=usuario;password=supassword"/>-->
+
+
+    <!-- Conexion a Sql Server usando Windows Authentication-->
+    <!--<add name ="cnn" connectionString ="data source=servidor;Trusted_Connection=True;initial catalog=base_de_datos"/>-->
+
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
