Proyecto grupo 41 session 22 abril

--- a/Web.config
+++ b/Web.config
@@ -8,7 +8,7 @@
 <configuration>
   <connectionStrings>
     <!-- Conexion a Sql Server usando Sql Server Authentication-->
-    <add name ="cnn" connectionString ="data source=nombre-servidor;user id=nombreusuario;password=supassword;initial catalog=base_de_datos"/>
+    <add name ="cnn" connectionString ="data source=ITZAEITZAYANAL\SQLEXPRESS;user id=sa;password=sa;initial catalog=virtual"/>
 
     <!-- Conexion a GearHost-->
     <!--<add name ="cnn" connectionString ="data source=servidor;user id=usuario;password=supassword"/>-->
