--- a/MVCLaboratorio.csproj
+++ b/MVCLaboratorio.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Utilerias\BaseHelper.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\images\logo-facpya.png" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Views\Home\Index.aspx" />
