--- a/Web.config
+++ b/Web.config
@@ -8,7 +8,7 @@
 <configuration>
   <connectionStrings>
     <!-- Conexion a Sql Server usando Sql Server Authentication-->
-    <add name ="cnn" connectionString ="data source=ITZAEITZAYANAL\SQLEXPRESS;user id=sa;password=sa;initial catalog=virtual"/>
+    <add name ="cnn" connectionString ="data source = den1.mssql7.gear.host; user id = virtual8; password = Dk9v4B0r!_0O; initial catalog = virtual8"/>
 
     <!-- Conexion a GearHost-->
     <!--<add name ="cnn" connectionString ="data source=servidor;user id=usuario;password=supassword"/>-->
